<resources>
    <string name="app_name">SangCX</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="command">Command</string>
    <string name="execute_as_root">Execute as root</string>
    <string name="execute_as_normal_user">Execute as normal user</string>
    <string name="home">Home</string>
    <string name="code_execution">Code Execution</string>
    <string name="hello_d">Hello 😃</string>
    <string name="list_app_with_accessibility_service">List app with Accessibility service:</string>
    <string name="accessibility_service">Accessibility Service</string>
    <string name="check_permission">Check Permission</string>
    <string name="app_can_send_sms">App can send SMS</string>
    <string name="read_logcat">Read Logcat</string>
    <string name="biometrics">Biometrics</string>
    <string name="keyboard_check">Keyboard Check</string>
    <string name="can_not_take_screenshot_or_record_this_screen">Can not take screenshot or record this screen</string>
    <string name="secure_screen">Secure Screen</string>
    <string name="send_request">Send request</string>
    <string name="get_public_key">Get public key</string>
    <string name="request">Request</string>
</resources>