<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item android:id="@+id/codeExecution"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/code_execution"/>

    <item android:id="@+id/accessibilityService"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/accessibility_service"/>

    <item android:id="@+id/checkPermission"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/check_permission"/>

    <item android:id="@+id/readLogcat"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/read_logcat" />

    <item android:id="@+id/biometrics"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/biometrics" />

    <item android:id="@+id/keyboardCheck"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/keyboard_check" />

    <item android:id="@+id/secureScreen"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/secure_screen" />

    <item android:id="@+id/request"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/request" />

</menu>