<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/command"
        android:hint="@string/command"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:text="@string/execute_as_root"
        android:id="@+id/execute_as_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/execute_as_normal_user"
        android:id="@+id/execute_as_normal_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:id="@+id/command_exec"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />

    <ScrollView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_gravity="left"
        android:layout_height="match_parent"
        tools:ignore="RtlHardcoded">
        <TextView
            android:layout_width="wrap_content"
            android:text=""
            android:id="@+id/result"
            android:layout_gravity="left"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints,RtlHardcoded" />
    </ScrollView>



</LinearLayout>